--- a/_data/home.yml
+++ b/_data/home.yml
@@ -54,8 +54,10 @@ old_project_entries:
     desc: The better people know you, the better they collaborate
 
 footer_entries:
-  - title: twitter
-    url: https://twitter.com/arthurstomp
+  # - title: twitter
+  #   url: https://twitter.com/arthurstomp
+  - title: linkedIn
+    url: https://www.linkedin.com/in/arthurocha/
 
   - title: github
     url: https://github.com/arthurstomp
